target/.metadata/.plugins/org.eclipse.cdt.ui/unAligned.build.log
14:15:04 **** Incremental Build of configuration Debug for project unAligned ****
make -j12 all 
arm-none-eabi-gcc "../Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DSTM32 -DSTM32F407G_DISC1 -DSTM32F4 -DSTM32F407VGTx -c -I../Inc -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Src/main.d" -MT"Src/main.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Src/main.o"
../Src/main.c:73:3: error: expected identifier or '(' before '/' token
   73 |  */
      |   ^
make: *** [Src/subdir.mk:25: Src/main.o] Error 1
"make -j12 all" terminated with exit code 2. Build might be incomplete.

14:15:04 Build Failed. 2 errors, 0 warnings. (took 225ms)

